--- a/package.json
+++ b/package.json
@@ -7,11 +7,21 @@
     "url": "git+https://github.com/vpapp-team/backend-data.git"
   },
   "author": "Tobias Kutscha (https://github.com/TimeForANinja)",
-  "main": "index.js",
+  "main": "./lib/index.js",
   "scripts": {
     "test": "npm run lint",
     "lint": "eslint ./",
     "lint:fix": "eslint --fix ./"
+  },
+  "dependencies": {
+    "backend-logger": "github:vpapp-team/backend-logger",
+    "backend-types": "github:vpapp-team/backend-types",
+    "backend-util": "github:vpapp-team/backend-util",
+    "ical.js": "^1.2.2",
+    "iconv-lite": "^0.4.24",
+    "mysql": "^2.16.0",
+    "pdfjs-dist": "^2.0.489",
+    "rrule": "^2.5.6"
   },
   "devDependencies": {
     "eslint": "^5.0.0"
